--- a/styles.css
+++ b/styles.css
@@ -99,3 +99,17 @@ html *
     width: 100%;
     height: 50px;
 }
+
+#configImport
+{
+    position: relative;
+    float: left;
+    width: 85%;
+}
+
+#importBtn
+{
+    position: relative;
+    float: right;
+    width: 10%;
+}
