--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,109 @@
-canvas {
-    image-rendering: pixelated;
+.canvas {
     position: relative;
+    image-rendering: pixelated;
     float: top;
-}
-
-.btn {
-    width: 100%;
-}
-
-#startDraw
-{
-    background-color: green;
-}
-
-#hideBtn
-{
-    background-color: red;
+    top: 0;
+    left: 0;
 }
 
 #baseCanvas
 {
     z-index: 0;
-    position: absolute;
+    position: relative;
+    top: 0;
+    left: 0;
+    border:1px solid #000000;
 }
 
 #drawCanvas
 {
     z-index: 1;
     position: absolute;
+    top: 0;
+    left: 0;
     opacity: 50%;
+    border:1px solid #000000;
+}
+
+.metamaskConnect {
+    position: fixed;
+    z-index: 2;
+    right: 50px;
+    top: 50px;
+    width: 10%;
+}
+
+.mmBtn
+{
+    width: 100%;
+    padding: 15px;
+    border-radius: 30px;
+    border: gray solid 2px;
+    outline: none;
+    position: relative;
+}
+
+.mmBtn:hover
+{
+    cursor: pointer;
+    border: blue solid 2px;
+    background: lightblue;
+}
+
+.mmBtn:hover:disabled
+{
+    border: gray solid 2px;
+    background: white;
+    cursor: not-allowed;
+}
+
+.mmBtnDrawing
+{
+    width: 100%;
+    padding: 15px;
+    border-radius: 30px;
+    border: gray solid 2px;
+    outline: none;
+}
+
+.mmBtnDrawing:before
+{
+    content: 'drawing...'
+}
+
+.mmBtnDrawing:hover
+{
+    background: indianred;
+    cursor: pointer;
+}
+
+.mmBtnDrawing:hover:before
+{
+    content: 'stop';
+}
+
+.btn {
+    width: 100%;
+}
+
+table#FriendlyTable
+{
+    table-layout: fixed;
+    width: 100%;
+}
+
+table#EnemyTable
+{
+    table-layout: fixed;
+    width: 100%;
+}
+
+#hideBtn
+{
+    width: 10%;
+    left: 45%;
+    background: url("https://cdn0.iconfinder.com/data/icons/glyphpack/167/visible-512.png") no-repeat center, yellow;
+    background-size: 75%;
 }
 
 .canvas
@@ -40,8 +115,16 @@ canvas {
 
 .btns
 {
-    position: relative;
-    float: bottom;
+    z-index: 2;
+    position: fixed;
+    bottom: 10px;
+    left: 5%;
+    width: 90%;
+}
+
+.afterImport
+{
+    visibility: hidden;
 }
 
 table
@@ -71,11 +154,6 @@ div#EnemyArtists
     width: 50%;
 }
 
-html *
-{
-    font-size: 50px;
-}
-
 #progressbar {
     border-style: solid;
     /* (height of inner div) / 2 + padding */
@@ -96,8 +174,8 @@ html *
 #progressbar>div {
     background-color: lightgreen;
     /* Adjust with JavaScript */
-    width: 100%;
-    height: 50px;
+    width: 0%;
+    height: 20px;
 }
 
 #configImport
@@ -112,4 +190,10 @@ html *
     position: relative;
     float: right;
     width: 10%;
+}
+
+.overlay
+{
+    position: fixed;
+    z-index: 2;
 }
