--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,11 @@ table#EnemyTable
     background-size: 75%;
 }
 
+#drawModeBtn
+{
+    visibility: hidden;
+}
+
 .canvas
 {
     position: relative;
